# t-hmi-esp-idf-vscode-project

./: .clang-format  .editorconfig  .gitignore  .version  CMakeLists.txt  README.md  add-code-to-path.txt  code.code-workspace  esp_idf_project_configuration.json  extensions-simple.txt  extensions-with-versions.txt  partition.csv  sdkconfig  sdkconfig.old
.backup/: esp_idf_project_configuration.json
.backup/CMakeLists.txt/5-08-2025/project/: CMakeLists.txt
.backup/clangd/: .clangd
.backup/main-29-Septembrie/: main.cpp
.backup/main/main-08.09.2025/main/: main.cpp
.backup/main/main-cli-backup/: CMakeLists.txt  main.cpp
.backup/sdkconfig/5-08-2025/: sdkconfig.defaults.esp32s3
.backup/sdkconfig/8-09-2025/: sdkconfig  sdkconfig.old  sdkconfig2
.board/lilygo-t-hmi/: pinout.h
.cache/clangd/index/: FAT_fs.c.99E688DE61373EE2.idx  FAT_fs.h.0EFD8A209DC16776.idx  LITTLE_fs.c.9726BE346471788E.idx  LITTLE_fs.h.63F85DB4768B38E1.idx  SPIF_fs.c.2B0CD18A63457E87.idx  SPIF_fs.h.7F0BA856C796D127.idx  base.h.AC75FD9D29CE6F4C.idx  button.cpp.990D18A5064A1DAC.idx  button.h.B5345320F0FDECAC.idx  code128.c.B0E31AE9C68CD7B1.idx  config.c.3B8895BA7A7EBDD3.idx  config.h.CC0EAF55FC094073.idx  defines.h.6D93BCF2A20B0682.idx  eMMC_fs.c.1A25FE043048E38A.idx  eMMC_fs.h.BD1EAC8CBD3BCF0F.idx  esp_lcd_touch.c.5E1B19E973819BA6.idx  esp_lcd_touch.h.B066ABFDB00D9729.idx  esp_lcd_touch_xpt2046.c.84331003D047A61B.idx  esp_lcd_touch_xpt2046.h.B9A6223266E8E868.idx  esp_littlefs.c.3B9348D7BE27947B.idx  esp_littlefs.h.9D47B6FFD605FADF.idx  esp_lvgl_port.c.D518E20D06788159.idx  esp_lvgl_port.h.2C9A85ACF58DBA21.idx  esp_lvgl_port_button.h.9C1357A793C94E14.idx  esp_lvgl_port_disp.c.3ED39923A8533FF6.idx  esp_lvgl_port_disp.h.9CFECED6B069657A.idx  esp_lvgl_port_knob.h.752C99D0D5C22C26.idx  esp_lvgl_port_priv.h.D7C64ADF8CEC5052.idx  esp_lvgl_port_touch.c.28690EB9524E43B3.idx  esp_lvgl_port_touch.h.427E74A01C90C5EC.idx  esp_lvgl_port_usbhid.h.FAEBE04EA5519C1B.idx  file_iterator.c.D8CCD8B78F6F8E36.idx  file_iterator.h.C51224757F32CF26.idx  filesystem-os.c.50F03170AB6CD8C1.idx  filesystem-os.h.37EBCA52B04B4466.idx  format-inl.h.31C4EC20E29AD39F.idx  format.cc.06297DE52F2689A7.idx  format.h.F209FEC1451A43FF.idx  funct.c.CA79BA30651AAE97.idx  funct.h.55BB6738BEB35744.idx  (+901 more)
.demo/1. Console CLI Demo/3.console+ftm-old/main/: app_main.cpp  ui.h
.demo/2. LVGL/LVGL 9 My Implementation Demo [working-in-progress]/before-version-alpha/: sdkconfig.defaults
.demo/2. LVGL/LVGL 9 My Implementation Demo [working-in-progress]/old/v0001/08.08August.2025-11.22am/: temp_sensor_cpu.cpp
.demo/2. LVGL/LVGL 9 My Implementation Demo [working-in-progress]/v0003,alpha0003/11.08August.2025-15.41pm/main/: main.cpp
.demo/2. LVGL/LVGL 9 My Implementation Demo [working-in-progress]/v0003,alpha0003/11.08August.2025-17.00pm/main/: main.cpp
.demo/2. LVGL/LVGL 9 esp_lvgl_port Implementation Demo [not-so-good]/lvgl9_esp_lvgl_port_implementation + ftm_lib-old/main 1/: CMakeLists.txt  app_main.cpp  init.cpp
.demo/2. LVGL/LVGL 9 esp_lvgl_port Implementation Demo [not-so-good]/lvgl9_esp_lvgl_port_implementation + ftm_lib-old/main 2/: CMakeLists.txt
.demo/Cross/1. main-console+lvgl-9+freertos-old/main/: CMakeLists.txt
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/main/: main.cpp  temp_sensor_cpu.cpp
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/one-cli-v004/: CMakeLists.txt  README.md
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/one-cli-v004/modules/: modules.h
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/one-cli-v004/modules/info_cmd/: funct.h
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/one-cli-v004/modules/perfmon_cmd/: perfmon_cmd.c  perfmon_cmd.h
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/one-cli-v004/modules/uptime_cmd/: uptime_cmd.c
.demo/new/esp-idf-5.5.1/freertos+lvgl9+temp-sensor+console+filesystem+onebutton/mylibs/onebutton-v001/: CMakeLists.txt
.demo/old/1. Console CLI Demo/1.main-console+filesystem/: CMakeLists.txt
.demo/old/1. Console CLI Demo/1.main-console+filesystem/main-5-August-2025/: CMakeLists.txt
.demo/old/Cross/1. main-console+lvgl-9+freertos-old/main/: app_main.cpp
.demo/old/esp-idf-5.5.1/Cross/1. main-console+lvgl-9+freertos-old/main/: ui.h
.eim_config/: eim_config-idf5.5.1-mac.toml  eim_config-idf5.5.1-winn.toml
.examples/old/test-sdcard/main/: CMakeLists.txt
.examples/test-sdcard/main/: app_main.cpp  lv_conf.h
.extras/: header.h  project-log  vscode-extensions.txt
.help/: Git_HELP.md  Mac_HELP.md
bootloader_components/my_boot_hooks/: CMakeLists.txt  hooks.c
components/fmt/: idf_component.yml
components/lvgl/: Kconfig
lib/filesystem-v0002/: CMakeLists.txt
lib/filesystem-v0002/include/: defines.h  eMMC_fs.h
lib/filesystem-v0002/src/: filesystem-os.c
lib/one-cli-v0004/: .clang-format  CMakeLists.txt
lib/one-cli-v0004/include/: init.h
lib/one-cli-v0004/modules/info_cmd/: info_cmd.c
lib/one-cli-v0004/modules/set_cmd/: set_cmd.c
lib/one-cli-v0004/modules/wifi_cmd/: wifi_join_cmd.c
lib/onebutton-v0001/: CMakeLists.txt
lib/onebutton-v0001/src/: button.cpp
main/: CMakeLists.txt  main.cpp
mylibs/filesystem-v002/: CMakeLists.txt  version
mylibs/filesystem-v002/include/: FAT_fs.h  defines.h  filesystem-os.h
mylibs/filesystem-v002/src/: FAT_fs.c  LITTLE_fs.c  SPIF_fs.c
mylibs/one-cli-v004/: version
mylibs/one-cli-v004/include/: config.h  one-cli.h
mylibs/one-cli-v004/modules/hello_cmd/: hello_cmd.c
mylibs/one-cli-v004/modules/info_cmd/: funct.c  stack.c  stack.h
mylibs/one-cli-v004/modules/nvs_cmd/: nvs_cmd.c
mylibs/one-cli-v004/modules/restart_cmd/: restart_cmd.c
mylibs/one-cli-v004/modules/set_cmd/: set_cmd.c  set_log.c
mylibs/one-cli-v004/modules/tasks_cmd/: tasks_cmd.c  tasks_cmd.h
mylibs/one-cli-v004/src/: config.c  init.c  one-cli.c
mylibs/onebutton-v001/: version
sdkconfigs/: sdkconfig
(+19 files in other folders)
